fix: z-index styles in header and modal

--- a/src/components/MainPage/Header/styles.module.scss
+++ b/src/components/MainPage/Header/styles.module.scss
@@ -65,7 +65,7 @@
     width: 100%;
     left: 0;
     top: 3.5rem;
-    z-index: 1000;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
@@ -95,7 +95,7 @@
     font-size: 2rem;
     padding-left: 1.2rem;
     position: relative;
-    z-index: 2000;
+    z-index: 3;
 
     & span {
       display: inline-block;
