--- a/src/components/MainPage/Modal/styles.module.scss
+++ b/src/components/MainPage/Modal/styles.module.scss
@@ -7,7 +7,7 @@
   background-color: $modal-backdrop-color;
   visibility: visible;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 10;
+  z-index: 4;
 }
 
 .modal {
